--- a/Users.html
+++ b/Users.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/users.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500;600;700&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/gh/cferdinandi/smooth-scroll/dist/smooth-scroll.polyfills.min.js"></script>
-    <title>Admin | ElissaDesign</title>
+    <title>Admin | JanvierDesign</title>
 </head>
 
 <body>
@@ -16,7 +16,7 @@
     <input type="checkbox" id="nav-toggle">
     <div class="sidebar">
         <div class="sidebar-brand">
-            <h2><span class="fa fa-ellipsis-v"><span> ElissaDesign</span></span></h2>
+            <h2><span class="fa fa-ellipsis-v"><span> JanvierDesign</span></span></h2>
         </div>
 
         <div class="sidebar-menu">
@@ -59,7 +59,7 @@
            <div class="user-wrapper">
                <img src="images/about-blog-1.png" width="30px" height="30px" alt="user-image">
                <div>
-                   <h4>Elissa Design</h4>
+                   <h4>Janvier Design</h4>
                    <small>Super admin</small>
                </div>
            </div>
