--- a/aboutme.html
+++ b/aboutme.html
@@ -1,226 +1,224 @@
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/font-awesome-4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="css/aboutme.css">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500;600;700&display=swap" rel="stylesheet">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="css/font-awesome-4.7.0/css/font-awesome.min.css" />
+    <link rel="stylesheet" href="css/aboutme.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500;600;700&display=swap"
+      rel="stylesheet" />
     <script src="https://cdn.jsdelivr.net/gh/cferdinandi/smooth-scroll/dist/smooth-scroll.polyfills.min.js"></script>
-    <title>About | ElissaDesign</title>
-</head>
+    <title>About | JanvierDesign</title>
+  </head>
 
-<body>
-
+  <body>
     <header>
-       <nav>
-           <div class="logo-online">
-            <h1 class="logo"><a href="index.html">ElissaDesign</a></h1>
-            <img src="images/online.png" alt="online icon" class="online-icon">
-           </div>
-           <div class="nav-container" id="navContainer">
-               <i class="fa fa-times" onclick="hideMenu()"></i>
-                <ul>
-                    <li><a href="index.html">HOME</a></li>
-                    <li><a href="blogLandingPage.html">BLOG</a></li>
-                    <li><a href="#">SIGN IN</a></li>
-                    <li class="sign-up"><a href="#">SIGN UP</a></li>
-                </ul>
-           </div>
-           <i class="fa fa-bars" onclick="showMenu()" ></i>
-       </nav>
+      <nav>
+        <div class="logo-online">
+          <h1 class="logo"><a href="index.html">JanvierDesign</a></h1>
+          <img src="images/online.png" alt="online icon" class="online-icon" />
+        </div>
+        <div class="nav-container" id="navContainer">
+          <i class="fa fa-times" onclick="hideMenu()"></i>
+          <ul>
+            <li><a href="index.html">HOME</a></li>
+            <li><a href="blogLandingPage.html">BLOG</a></li>
+            <li><a href="#">SIGN IN</a></li>
+            <li class="sign-up"><a href="#">SIGN UP</a></li>
+          </ul>
+        </div>
+        <i class="fa fa-bars" onclick="showMenu()"></i>
+      </nav>
     </header>
 
     <section>
+      <div class="container">
+        <div class="content margin-container">
+          <div class="content-text">
+            <h3>Software Engineer</h3>
+            <p class="upper">
+              Customer brands that <br />drive brands & startups
+            </p>
+            <button type="button" class="btn-colored">Get started</button>
+          </div>
+          <div class="content-img">
+            <img
+              src="images/undraw_software_engineer_re_tnjc.svg"
+              alt="mordern software design Janvier"
+              class="morden-design-img" />
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section>
+      <div class="container">
+        <div class="content">
+          <div class="about-img">
+            <img
+              src="images/undraw_about_me_re_82bv.svg"
+              alt="About me image"
+              class="about-img" />
+          </div>
+          <div class="about-text">
+            <h1>ABOUT ME</h1>
+            <p>
+              Lörem ipsum biter lylavis tiskade. Vav sprita: oaktat dol ner,
+              social distansering. Hågt sokin. Trira kvasir utan nysåling.
+              Anapomisk bekasm inte krobel fögånar reanat. Du kan vara drabbad.
+            </p>
+            <br />
+            <p>
+              Lörem ipsum biter lylavis tiskade. Vav sprita: oaktat dol ner,
+              social distansering. Hågt sokin. Trira kvasir utan nysåling.
+              Anapomisk bekasm inte krobel fögånar reanat. Du kan vara drabbad.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section>
+      <div class="container">
+        <div class="why-me-section">
+          <h1>WHY ME?</h1>
+          <p>
+            Lörem ipsum vikusade dos. Rusade. Sutende multison. Krol radioism.
+            Belig jitinde en trigt eller mirtad möbelt. Bas trina divåre en dil.
+            Nese diment. Susesm dojägt. Dining immersiv, digavis. Sost anasamma.
+            Bas trina divåre en dil. Nese diment. Susesm dojägt. Dining
+            immersiv, digavis. Sost anasamma.
+          </p>
+        </div>
+        <div class="content whyme-top-margin">
+          <div class="box-1">
+            <div class="header-text">
+              <i class="fa fa-medkit"></i>
+              <h1>QUALITY</h1>
+            </div>
+            <p>
+              Lörem ipsum tektig pregen sepp som ör, hyling. Autokåns deitet
+              tenär i vikån mir. Kontrakroment stenobelt pende.
+            </p>
+          </div>
+          <div class="box-1">
+            <div class="header-text">
+              <i class="fa fa-fire"></i>
+              <h1>PASSION</h1>
+            </div>
+            <p>
+              Lörem ipsum tektig pregen sepp som ör, hyling. Autokåns deitet
+              tenär i vikån mir. Kontrakroment stenobelt pende.
+            </p>
+          </div>
+        </div>
+        <!-- --------Duplication -->
+        <div class="content whyme-top-margin">
+          <div class="box-1">
+            <div class="header-text">
+              <i class="fa fa-shield"></i>
+              <h1>INTEGRITY</h1>
+            </div>
+            <p>
+              Lörem ipsum tektig pregen sepp som ör, hyling. Autokåns deitet
+              tenär i vikån mir. Kontrakroment stenobelt pende.
+            </p>
+          </div>
+          <div class="box-1">
+            <div class="header-text">
+              <i class="fa fa-sun-o"></i>
+              <h1>EXPERTISE</h1>
+            </div>
+            <p>
+              Lörem ipsum tektig pregen sepp som ör, hyling. Autokåns deitet
+              tenär i vikån mir. Kontrakroment stenobelt pende.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section>
+      <div class="skills-text">
+        <h1>SKILLS</h1>
+      </div>
+      <div class="skills-section">
         <div class="container">
-            <div class="content margin-container">
-                <div class="content-text">
-                    <h3>Software Engineer</h3>
-                    <p class="upper">Customer brands that <br>drive brands & startups</p>
-                    <button type="button" class="btn-colored">Get started</button>
-                </div>
-                <div class="content-img">
-                    <img src="images/undraw_software_engineer_re_tnjc.svg" alt="mordern software design elissa" class="morden-design-img">
-                </div>
-            </div>
+          <div class="skills-content">
+            <h1>HTML & CSS</h1>
+            <h1>JAVASCRIPT</h1>
+            <h1>NODE.JS</h1>
+            <h1>REACT.JS</h1>
+          </div>
         </div>
+      </div>
     </section>
 
-
-
-
     <section>
-        <div class="container">
-            <div class="content">
-                <div class="about-img">
-                    <img src="images/undraw_about_me_re_82bv.svg" alt="About me image" class="about-img">
-                </div>
-                <div class="about-text">
-                    <h1>ABOUT ME</h1>
-                    <p>Lörem ipsum biter lylavis tiskade. Vav sprita: oaktat dol ner, social distansering. Hågt sokin. Trira kvasir utan nysåling. Anapomisk bekasm inte krobel fögånar reanat. Du kan vara drabbad. </p> <br>
-                    <p>Lörem ipsum biter lylavis tiskade. Vav sprita: oaktat dol ner, social distansering. Hågt sokin. Trira kvasir utan nysåling. Anapomisk bekasm inte krobel fögånar reanat. Du kan vara drabbad. </p>
-                </div>
+      <div class="container">
+        <div class="content">
+          <div class="text-left">
+            <p>We would like to here about your project.</p>
+            <button type="button" class="btn-colored">Get in touch</button>
+          </div>
+          <div class="address-right">
+            <div class="phone-address">
+              <i class="fa fa-phone"></i>
+              <p>+250 780 478 387</p>
             </div>
+            <div class="email-address">
+              <i class="fa fa-envelope-o"></i>
+              <p>umuhozajanviere5@gmail.com</p>
+            </div>
+          </div>
         </div>
+      </div>
     </section>
 
-
-
-
-
     <section>
-        <div class="container">
-            <div class="why-me-section">
-                <h1>WHY ME?</h1>
-                 <p>Lörem ipsum vikusade dos. Rusade. Sutende multison. Krol radioism. Belig jitinde en trigt eller mirtad möbelt. Bas trina divåre en dil. Nese diment. Susesm dojägt. Dining immersiv, digavis. Sost anasamma. 
-                     Bas trina divåre en dil. Nese diment. Susesm dojägt. Dining immersiv, digavis. Sost anasamma. 
-                 </p>
-            </div>
-            <div class="content whyme-top-margin">
-                <div class="box-1">
-                    <div class="header-text">
-                        <i class="fa fa-medkit"></i>
-                        <h1>QUALITY</h1>
-                    </div>
-                    <p>Lörem ipsum tektig pregen sepp som ör, hyling. Autokåns deitet tenär i vikån mir. Kontrakroment stenobelt pende.</p>
-                </div>
-                <div class="box-1">
-                    <div class="header-text">
-                        <i class="fa fa-fire"></i>
-                        <h1>PASSION</h1>
-                    </div>
-                    <p>Lörem ipsum tektig pregen sepp som ör, hyling. Autokåns deitet tenär i vikån mir. Kontrakroment stenobelt pende.</p>
-                </div>
-            </div>
-            <!-- --------Duplication -->
-            <div class="content whyme-top-margin">
-                <div class="box-1">
-                    <div class="header-text">
-                        <i class="fa fa-shield"></i>
-                        <h1>INTEGRITY</h1>
-                    </div>
-                    <p>Lörem ipsum tektig pregen sepp som ör, hyling. Autokåns deitet tenär i vikån mir. Kontrakroment stenobelt pende.</p>
-                </div>
-                <div class="box-1">
-                    <div class="header-text">
-                        <i class="fa fa-sun-o"></i>
-                        <h1>EXPERTISE</h1>
-                    </div>
-                    <p>Lörem ipsum tektig pregen sepp som ör, hyling. Autokåns deitet tenär i vikån mir. Kontrakroment stenobelt pende.</p>
-                </div>
-            </div>
+      <div class="container">
+        <div class="social-media-icons">
+          <a href="https://www.instagram.com/" target="_blanck"
+            ><i class="fa fa-instagram"></i
+          ></a>
+          <a href="https://twitter.com/login?lang=en" target="_blanck"
+            ><i class="fa fa-twitter"></i
+          ></a>
+          <a href="https://www.instagram.com/" target="_blanck"
+            ><i class="fa fa-facebook"></i
+          ></a>
+          <a href="https://www.instagram.com/" target="_blanck"
+            ><i class="fa fa-linkedin"></i
+          ></a>
         </div>
+      </div>
     </section>
 
+    <!-- ------------section-1-------------------------- -->
 
-
-
-
-    <section>
-        <div class="skills-text">
-            <h1>SKILLS</h1>
-        </div>
-       <div class="skills-section">
-           <div class="container">
-            <div class="skills-content">
-                <h1>HTML & CSS</h1>
-                <h1>JAVASCRIPT</h1>
-                <h1>NODE.JS</h1>
-                <h1>REACT.JS</h1>
-            </div>
-           </div>
-       </div>
-    </section>
-
-
-
-
-
-    <section>
-       <div class="container">
-           <div class="content">
-               <div class="text-left">
-                   <p>We would like to here
-                    about your project.</p>
-                    <button type="button" class="btn-colored">Get in touch</button>
-               </div>
-               <div class="address-right">
-                   <div class="phone-address">
-                    <i class="fa fa-phone"></i>
-                    <p>+250 780 478 387</p>
-                   </div>
-                   <div class="email-address">
-                    <i class="fa fa-envelope-o"></i>
-                    <p>ihimbazwelisa@gmail.com</p>
-                   </div>
-               </div>
-           </div>
-       </div>
-    </section>
-
-
-
-
-    <section>
-       <div class="container">
-           <div class="social-media-icons">
-                <a href="https://www.instagram.com/" target="_blanck"><i class="fa fa-instagram"></i></a>
-                <a href="https://twitter.com/login?lang=en" target="_blanck"><i class="fa fa-twitter"></i></a>
-                <a href="https://www.instagram.com/" target="_blanck"><i class="fa fa-facebook"></i></a>
-                <a href="https://www.instagram.com/" target="_blanck"><i class="fa fa-linkedin"></i></a>
-
-           </div>
-       </div>
-    </section>
-
-<!-- ------------section-1-------------------------- -->
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<!------------------------- footer-------------------------- -->
+    <!------------------------- footer-------------------------- -->
 
     <footer>
-        <p> &copy; Elissadesign||all rights reserved</p>
+      <p>&copy; Janvierdesign||all rights reserved</p>
     </footer>
 
-
-   
-
     <script>
-        var navContainer = document.getElementById("navContainer");
+      var navContainer = document.getElementById("navContainer");
 
-        function showMenu(){
-            navContainer.style.top = "0";
-        }
-        function hideMenu(){
-            navContainer.style.top = "-80vh";
-        }
+      function showMenu() {
+        navContainer.style.top = "0";
+      }
+      function hideMenu() {
+        navContainer.style.top = "-80vh";
+      }
 
-
-
-        var scroll = new SmoothScroll('a[href*="#"]', {
-	    speed: 1000,
-	    speedAsDuration: true
-})
+      var scroll = new SmoothScroll('a[href*="#"]', {
+        speed: 1000,
+        speedAsDuration: true,
+      });
     </script>
-</body>
+  </body>
 </html>
