--- a/admin.html
+++ b/admin.html
@@ -1,174 +1,180 @@
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/font-awesome-4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
-    <link rel="stylesheet" href="css/admin.css">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500;600;700&display=swap" rel="stylesheet">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="css/font-awesome-4.7.0/css/font-awesome.min.css" />
+    <link
+      rel="stylesheet"
+      href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css" />
+    <link rel="stylesheet" href="css/admin.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500;600;700&display=swap"
+      rel="stylesheet" />
     <script src="https://cdn.jsdelivr.net/gh/cferdinandi/smooth-scroll/dist/smooth-scroll.polyfills.min.js"></script>
-    <title>Admin | ElissaDesign</title>
-</head>
+    <title>Admin | JanvierDesign</title>
+  </head>
 
-<body>
-
-    <input type="checkbox" id="nav-toggle">
+  <body>
+    <input type="checkbox" id="nav-toggle" />
     <div class="sidebar">
-        <div class="sidebar-brand">
-            <h2><span class="fa fa-ellipsis-v"><span> ElissaDesign</span></span></h2>
-        </div>
+      <div class="sidebar-brand">
+        <h2>
+          <span class="fa fa-ellipsis-v"><span> JanvierDesign</span></span>
+        </h2>
+      </div>
 
-        <div class="sidebar-menu">
-            <ul>
-                <li>
-                    <a href="#" class="active"><span class="fa fa-home"></span>
-                    <span>Dashboard</span></a>
-                </li>
-                <li>
-                    <a href="Users.html"><span class="fa fa-users"></span>
-                    <span>Users</span></a>
-                </li>
-                <li>
-                    <a href="messages.html"><span class="fa fa-commenting-o"></span>
-                    <span>Messages</span></a>
-                </li>
-                <li>
-                    <a href="AllBlogs.html"><span class="fa fa-clipboard"></span>
-                    <span>Blogs</span></a>
-                </li>
-            </ul>
-        </div>
+      <div class="sidebar-menu">
+        <ul>
+          <li>
+            <a href="#" class="active"
+              ><span class="fa fa-home"></span> <span>Dashboard</span></a
+            >
+          </li>
+          <li>
+            <a href="Users.html"
+              ><span class="fa fa-users"></span> <span>Users</span></a
+            >
+          </li>
+          <li>
+            <a href="messages.html"
+              ><span class="fa fa-commenting-o"></span> <span>Messages</span></a
+            >
+          </li>
+          <li>
+            <a href="AllBlogs.html"
+              ><span class="fa fa-clipboard"></span> <span>Blogs</span></a
+            >
+          </li>
+        </ul>
+      </div>
     </div>
 
-
     <div class="main-content">
-        <header>
-           <h2>
-               <label for="nav-toggle">
-                   <span class="fa fa-bars"></span>
-               </label>
-               Dashboard
-           </h2>
+      <header>
+        <h2>
+          <label for="nav-toggle">
+            <span class="fa fa-bars"></span>
+          </label>
+          Dashboard
+        </h2>
 
-           <div class="search-wrapper">
-               <span class="fa fa-search"></span>
-               <input type="search" placeholder="Search here..">
-           </div>
-           
-           <div class="user-wrapper">
-               <img src="images/about-blog-1.png" width="30px" height="30px" alt="user-image">
-               <div>
-                   <h4>Elissa Design</h4>
-                   <small>Super admin</small>
-               </div>
-           </div>
-        </header>
+        <div class="search-wrapper">
+          <span class="fa fa-search"></span>
+          <input type="search" placeholder="Search here.." />
+        </div>
 
+        <div class="user-wrapper">
+          <img
+            src="images/about-blog-1.png"
+            width="30px"
+            height="30px"
+            alt="user-image" />
+          <div>
+            <h4>Janvier Design</h4>
+            <small>Super admin</small>
+          </div>
+        </div>
+      </header>
 
-
-        <main>
-
-            <div class="cards">
-
-                <div class="card-single">
-                    <div>
-                        <h1 id="users"></h1>
-                        <span>users</span>
-                    </div>
-                    <div>
-                        <span class="fa fa-users"></span>
-                    </div>
-                </div>
-
-                <div class="card-single">
-                    <div>
-                        <h1 id="posts"></h1>
-                        <span>Blogs</span>
-                    </div>
-                    <div>
-                        <span class="fa fa-clipboard"></span>
-                    </div>
-                </div>
-
-                <div class="card-single">
-                    <div>
-                        <h1 id="messages"></h1>
-                        <span>Messages</span>
-                    </div>
-                    <div>
-                        <span class="fa fa-commenting-o"></span>
-                    </div>
-                </div>
-                <div class="card-single">
-                    <div>
-                        <h1>32</h1>
-                        <span>Total Reviews</span>
-                    </div>
-                    <div>
-                        <span class="fa fa-eye"></span>
-                    </div>
-                </div>
-
+      <main>
+        <div class="cards">
+          <div class="card-single">
+            <div>
+              <h1 id="users"></h1>
+              <span>users</span>
             </div>
+            <div>
+              <span class="fa fa-users"></span>
+            </div>
+          </div>
 
+          <div class="card-single">
+            <div>
+              <h1 id="posts"></h1>
+              <span>Blogs</span>
+            </div>
+            <div>
+              <span class="fa fa-clipboard"></span>
+            </div>
+          </div>
 
-            <div class="recent-grid">
-                <div class="messages">
-                    <div class="card">
-                        <div class="card-header">
-                            <h2>Recent Mesages</h2>
+          <div class="card-single">
+            <div>
+              <h1 id="messages"></h1>
+              <span>Messages</span>
+            </div>
+            <div>
+              <span class="fa fa-commenting-o"></span>
+            </div>
+          </div>
+          <div class="card-single">
+            <div>
+              <h1>32</h1>
+              <span>Total Reviews</span>
+            </div>
+            <div>
+              <span class="fa fa-eye"></span>
+            </div>
+          </div>
+        </div>
 
-                            <button><a href="messages.html">See all</a> <span class="las la-arrow-right"></span></button>
-                        </div>
-                        <div class="card-body">
-                           <div class="table-responsive">
-                             <table width="100%"> 
-                                <thead>
-                                    <tr>
-                                        <td>Name</td>
-                                        <td>Option</td>
-                                        <td>Email</td>
-                                        <td>Message</td>
-                                    </tr>
-                                </thead>
-                                <tbody id="message-data">
-                                    <!-- <tr>
-                                        <td>Ih Elissa</td>
+        <div class="recent-grid">
+          <div class="messages">
+            <div class="card">
+              <div class="card-header">
+                <h2>Recent Mesages</h2>
+
+                <button>
+                  <a href="messages.html">See all</a>
+                  <span class="las la-arrow-right"></span>
+                </button>
+              </div>
+              <div class="card-body">
+                <div class="table-responsive">
+                  <table width="100%">
+                    <thead>
+                      <tr>
+                        <td>Name</td>
+                        <td>Option</td>
+                        <td>Email</td>
+                        <td>Message</td>
+                      </tr>
+                    </thead>
+                    <tbody id="message-data">
+                      <!-- <tr>
+                                        <td>Ih Janvier</td>
                                         <td>mbazwelisa@gmail.com</td>
                                         <td>Hi, how are you doing buddy?</td>
                                     </tr>
                                     <tr>
-                                        <td>Ihimbazwe Elissa</td>
+                                        <td>Ihimbazwe Janvier</td>
                                         <td>ihimbazwelisa@gmail.com</td>
                                         <td>Hi, how are you doing buddy?</td>
                                     </tr>
                                     <tr>
-                                        <td>Ihimbazwe Elissa</td>
+                                        <td>Ihimbazwe Janvier</td>
                                         <td>ihimbazwelisa@gmail.com</td>
                                         <td>Hi, how are you doing buddy?</td>
                                     </tr> -->
-                                </tbody>
-                             </table>
-                           </div>
-                        </div>
-
-                    </div>
+                    </tbody>
+                  </table>
                 </div>
+              </div>
             </div>
-        </main>
+          </div>
+        </div>
+      </main>
     </div>
 
-
     <script>
-
-        var scroll = new SmoothScroll('a[href*="#"]', {
-	    speed: 1000,
-	    speedAsDuration: true
-    })
-    
+      var scroll = new SmoothScroll('a[href*="#"]', {
+        speed: 1000,
+        speedAsDuration: true,
+      });
     </script>
     <script src="js/admin.js"></script>
-   
-</body>
+  </body>
 </html>
