--- a/blogLandingPage.html
+++ b/blogLandingPage.html
@@ -1,135 +1,146 @@
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/font-awesome-4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="css/blogLandingPage.css">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500;600;700&display=swap" rel="stylesheet">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="css/font-awesome-4.7.0/css/font-awesome.min.css" />
+    <link rel="stylesheet" href="css/blogLandingPage.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500;600;700&display=swap"
+      rel="stylesheet" />
     <script src="https://cdn.jsdelivr.net/gh/cferdinandi/smooth-scroll/dist/smooth-scroll.polyfills.min.js"></script>
-    <title>Blog | ElissaDesign</title>
-</head>
+    <title>Blog | JanvierDesign</title>
+  </head>
 
-<body>
-
+  <body>
     <header>
-       <nav>
-           <div class="logo-online">
-            <h1 class="logo"><a href="index.html">ElissaDesign</a></h1>
-            <img src="images/online.png" alt="online icon" class="online-icon">
-           </div>
-           <div class="nav-container" id="navContainer">
-               <i class="fa fa-times" onclick="hideMenu()"></i>
-                <ul>
-                    <li><a href="index.html">HOME</a></li>
-                    <li><a href="#">BLOG</a></li>
-                    <li class="sign-up"><a href="SignUp.html">SIGN IN</a></li>
-                </ul>
-           </div>
-           <i class="fa fa-bars" onclick="showMenu()" ></i>
-       </nav>
+      <nav>
+        <div class="logo-online">
+          <h1 class="logo"><a href="index.html">JanvierDesign</a></h1>
+          <img src="images/online.png" alt="online icon" class="online-icon" />
+        </div>
+        <div class="nav-container" id="navContainer">
+          <i class="fa fa-times" onclick="hideMenu()"></i>
+          <ul>
+            <li><a href="index.html">HOME</a></li>
+            <li><a href="#">BLOG</a></li>
+            <li class="sign-up"><a href="SignUp.html">SIGN IN</a></li>
+          </ul>
+        </div>
+        <i class="fa fa-bars" onclick="showMenu()"></i>
+      </nav>
     </header>
     <section>
-        <div class="container">
-            <div class="hitnews-aboutme">
-                <div class="hitnews">
-                    <div class="categoty-time">
-                        <h3>Product</h3>
-                        <p>8 min read</p>
-                    </div>
-                    <h1>What’s boosting the development </h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Dolor et tortor odio mauris cursus pulvinar posuere. Ac interdum nec egestas aliquet eget diam. Sed sit ultricies </p>
-                   <a href="singlePageBlog.html"> <img src="images/Image-hit-1.png" alt="news-image" class="hit-news-img"></a>
-                    <div class="author-time">
-                        <h5>Elissa Design</h5>
-                        <p>08 May 20202</p>
-                    </div>
-                </div>
-                <div class="aboutme">
-                    <h3>ABOUT ME</h3>
-                    <img src="images/about-blog-1.png" alt="image-about-me" class="about-me-img">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Eu integer in vulputate laoreet. Imperdiet fusce ac egestas tellus quis. Enim egestas sem ut nec, cras fau sed.</p>
-                    <div class="social-media">
-                        <h1>FOLLOW US</h1>
-                        <div class="social-media-icons">
-                            <a href="https://www.instagram.com/" target="_blanck"><i class="fa fa-instagram"></i></a>
-                            <a href="https://twitter.com/login?lang=en" target="_blanck"><i class="fa fa-twitter"></i></a>
-                            <a href="https://www.instagram.com/" target="_blanck"><i class="fa fa-facebook"></i></a>
-                            <a href="https://www.instagram.com/" target="_blanck"><i class="fa fa-linkedin"></i></a>
-                       </div>
-                    </div>
-                </div>
+      <div class="container">
+        <div class="hitnews-aboutme">
+          <div class="hitnews">
+            <div class="categoty-time">
+              <h3>Product</h3>
+              <p>8 min read</p>
             </div>
+            <h1>What’s boosting the development</h1>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Dolor et
+              tortor odio mauris cursus pulvinar posuere. Ac interdum nec
+              egestas aliquet eget diam. Sed sit ultricies
+            </p>
+            <a href="singlePageBlog.html">
+              <img
+                src="images/Image-hit-1.png"
+                alt="news-image"
+                class="hit-news-img"
+            /></a>
+            <div class="author-time">
+              <h5>Janvier Design</h5>
+              <p>08 May 20202</p>
+            </div>
+          </div>
+          <div class="aboutme">
+            <h3>ABOUT ME</h3>
+            <img
+              src="images/about-blog-1.png"
+              alt="image-about-me"
+              class="about-me-img" />
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Eu
+              integer in vulputate laoreet. Imperdiet fusce ac egestas tellus
+              quis. Enim egestas sem ut nec, cras fau sed.
+            </p>
+            <div class="social-media">
+              <h1>FOLLOW US</h1>
+              <div class="social-media-icons">
+                <a href="https://www.instagram.com/" target="_blanck"
+                  ><i class="fa fa-instagram"></i
+                ></a>
+                <a href="https://twitter.com/login?lang=en" target="_blanck"
+                  ><i class="fa fa-twitter"></i
+                ></a>
+                <a href="https://www.instagram.com/" target="_blanck"
+                  ><i class="fa fa-facebook"></i
+                ></a>
+                <a href="https://www.instagram.com/" target="_blanck"
+                  ><i class="fa fa-linkedin"></i
+                ></a>
+              </div>
+            </div>
+          </div>
         </div>
+      </div>
     </section>
-<hr>
+    <hr />
 
     <section>
-        <div class="container">
-            <div class="news-container" id="news-container">
-            
-        
-            </div>
-        </div>
+      <div class="container">
+        <div class="news-container" id="news-container"></div>
+      </div>
     </section>
-
 
     <section>
-        <div class="container">
-            <div class="align-btn">
-                <div class="btn-next">
-                    <p>1</p>
-                    <p>2</p>
-                    <p>3</p>
-                    <p><i class="fa fa-arrow-right"></i></p>
-                </div>
-            </div>
+      <div class="container">
+        <div class="align-btn">
+          <div class="btn-next">
+            <p>1</p>
+            <p>2</p>
+            <p>3</p>
+            <p><i class="fa fa-arrow-right"></i></p>
+          </div>
         </div>
+      </div>
     </section>
-
 
     <section>
-        <div class="container">
-            <div class="social-media-section">
-                <a href="#">LinkedIn</a>
-                <a href="#">Email</a>
-                <a href="#">GitHub</a>
-            </div>
+      <div class="container">
+        <div class="social-media-section">
+          <a href="#">LinkedIn</a>
+          <a href="#">Email</a>
+          <a href="#">GitHub</a>
         </div>
+      </div>
     </section>
 
-   
-
-
-
-
-
-<!------------------------- footer-------------------------- -->
+    <!------------------------- footer-------------------------- -->
 
     <footer>
-        <p> &copy; Elissadesign||all rights reserved</p>
+      <p>&copy; Janvierdesign||all rights reserved</p>
     </footer>
 
-
-   
-
     <script>
-        var navContainer = document.getElementById("navContainer");
+      var navContainer = document.getElementById("navContainer");
 
-        function showMenu(){
-            navContainer.style.top = "0";
-        }
-        function hideMenu(){
-            navContainer.style.top = "-80vh";
-        }
+      function showMenu() {
+        navContainer.style.top = "0";
+      }
+      function hideMenu() {
+        navContainer.style.top = "-80vh";
+      }
 
-
-
-        var scroll = new SmoothScroll('a[href*="#"]', {
-	    speed: 1000,
-	    speedAsDuration: true
-})
+      var scroll = new SmoothScroll('a[href*="#"]', {
+        speed: 1000,
+        speedAsDuration: true,
+      });
     </script>
     <script src="js/post.js"></script>
-</body>
+  </body>
 </html>
