--- a/aboutme.html
+++ b/aboutme.html
@@ -11,14 +11,14 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500;600;700&display=swap"
       rel="stylesheet" />
     <script src="https://cdn.jsdelivr.net/gh/cferdinandi/smooth-scroll/dist/smooth-scroll.polyfills.min.js"></script>
-    <title>About | JanvierDesign</title>
+    <title>About | JanviereDesign</title>
   </head>
 
   <body>
     <header>
       <nav>
         <div class="logo-online">
-          <h1 class="logo"><a href="index.html">JanvierDesign</a></h1>
+          <h1 class="logo"><a href="index.html">JanviereDesign</a></h1>
           <img src="images/online.png" alt="online icon" class="online-icon" />
         </div>
         <div class="nav-container" id="navContainer">
@@ -47,7 +47,7 @@
           <div class="content-img">
             <img
               src="images/undraw_software_engineer_re_tnjc.svg"
-              alt="mordern software design Janvier"
+              alt="mordern software design Janviere"
               class="morden-design-img" />
           </div>
         </div>
@@ -171,7 +171,7 @@
             </div>
             <div class="email-address">
               <i class="fa fa-envelope-o"></i>
-              <p>umuhozajanviere5@gmail.com</p>
+              <p>umuhozaJanviere5@gmail.com</p>
             </div>
           </div>
         </div>
@@ -202,7 +202,7 @@
     <!------------------------- footer-------------------------- -->
 
     <footer>
-      <p>&copy; Janvierdesign||all rights reserved</p>
+      <p>&copy; Janvieredesign||all rights reserved</p>
     </footer>
 
     <script>
