--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500;600;700&display=swap"
       rel="stylesheet" />
     <script src="https://cdn.jsdelivr.net/gh/cferdinandi/smooth-scroll/dist/smooth-scroll.polyfills.min.js"></script>
-    <title>Janvier || Resume</title>
+    <title>Janviere || Resume</title>
   </head>
 
   <body>
@@ -22,7 +22,7 @@
       <nav>
         <div class="logo-online">
           <h1 class="logo">
-            <a href="#"><span>Janvier</span>Design</a>
+            <a href="#"><span>Janviere</span>Design</a>
           </h1>
           <img src="images/online.png" alt="online icon" class="online-icon" />
         </div>
@@ -140,7 +140,7 @@
                   varius nec nunc malesuada et sed gravida
                 </p>
                 <br />
-                <p>Designed by <span>JanvierDesign</span>.</p>
+                <p>Designed by <span>JanviereDesign</span>.</p>
                 <div class="btn-container">
                   <button type="button" class="btn-porfolio-colored">
                     Preview
@@ -165,7 +165,7 @@
                   varius nec nunc malesuada et sed gravida
                 </p>
                 <br />
-                <p>Designed by <span>JanvierDesign</span>.</p>
+                <p>Designed by <span>JanviereDesign</span>.</p>
                 <div class="btn-container">
                   <button type="button" class="btn-porfolio-colored">
                     Preview
@@ -190,7 +190,7 @@
                   varius nec nunc malesuada et sed gravida
                 </p>
                 <br />
-                <p>Designed by <span>JanvierDesign</span>.</p>
+                <p>Designed by <span>JanviereDesign</span>.</p>
                 <div class="btn-container">
                   <button type="button" class="btn-porfolio-colored">
                     Preview
@@ -279,7 +279,7 @@
                 type="email"
                 name="email"
                 id="email"
-                placeholder="umuhozajanviere5@gmail.com" />
+                placeholder="umuhozaJanviere5@gmail.com" />
               <p id="error-email"></p>
             </div>
             <div class="input-group">
@@ -314,7 +314,7 @@
     <!------------------------- footer-------------------------- -->
 
     <footer>
-      <p>&copy; Janvierdesign||all rights reserved</p>
+      <p>&copy; Janvieredesign||all rights reserved</p>
     </footer>
 
     <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
